[tool.poetry]
name = "mcp-server-demo"
version = "0.1.0"
description = "FastAPI + Claude API to query local documents"
authors = ["miguel.barrios <tucorreo@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110"
uvicorn = "^0.27"
httpx = "^0.27"
pydantic = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
